fix: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -343,7 +343,7 @@ ul li {
 
 .section-3 {
   width: 100%;
-  height: 774px;
+  height: fit-content;
   left: 0px;
   top: 1794px;
   background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
@@ -367,8 +367,6 @@ ul li {
 
 .section3-img{
   content:url("./assets/images/Frame 59546-1.png");
-  width:100%;
-
 }
 
 .section-title{
@@ -418,7 +416,7 @@ background-clip: text;
   padding: 11px;
   background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
   border-radius: 8px;
-  width: 30%;
+  width: 120px;
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;text-align: center;
@@ -502,4 +500,11 @@ align-items: flex-start;
   padding-left: 6%;
 }ul li:hover, a:hover{
   cursor: pointer;
+}
+.locate{
+  background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
+border: 1px solid #B4B4B4;
+border-radius: 8px;
+padding:5px;
+z-index:1;
 }
